--- a/src/pages/appGanhos.html
+++ b/src/pages/appGanhos.html
@@ -15,10 +15,15 @@
         <header class="menu-lateral-app">
             <div>
 
-                <div>
+                <div class="container-title">
                     <div class="title-project-lateral">
-                        <img src="../../assets/imgs/icons/wallet-fill.svg" alt="Logo FinPlanner">
-                        <h1 class="name-project">finplanner</h1>
+                        <div class="menuHamburguer-button">
+                            <img src="../../assets/imgs/icons/hamburguerMenu.svg" alt="Menu Responsivo">
+                        </div>
+                        <div class="title-projet-logo">
+                            <img src="../../assets/imgs/icons/wallet-fill.svg" alt="Logo FinPlanner">
+                            <h1 class="name-project">finplanner</h1>
+                        </div>
                     </div>
                 </div>
 
@@ -54,7 +59,37 @@
             </button>
         </header>
 
-        <section class="container-principal container-banner">
+        <header class="menuHamburguer">
+            <nav class="cabecalho-navegacao-hamburguer">
+                <ul class="navegacao-lista">
+                    <li class="active">
+                        <img src="../../assets/imgs/icons/home.svg" alt="Icone Relatórios">
+                        <a href="./app.html">Menu</a>
+                    </li>
+                    <li>
+                        <img src="../../assets/imgs/icons/relatorios.svg" alt="Icone Relatórios">
+                        <a href="./appRelatorios.html">Relatórios</a>
+                    </li>
+                    <li>
+                        <img src="../../assets/imgs/icons/ganhos.svg" alt="Icone Ganhos">
+                        <a href="./appGanhos.html">Ganhos</a>
+                    </li>
+                    <li>
+                        <img src="../../assets/imgs/icons/gastos.svg" alt="Icone Gastos">
+                        <a href="./appGastos.html">Gastos</a>
+                    </li>
+                    <li>
+                        <img src="../../assets/imgs/icons/conversor.svg" alt="Icone Conversor de moedas">
+                        <a href="./conversor.html">Converter moedas</a>
+                    </li>
+                    <li class="btn-toggleMode">
+                        Mudar de Tema
+                    </li>
+                </ul>
+            </nav>
+        </header>
+
+        <section class="container-principal">
             <div class="campo-informacoes">
                 <div class="controles">
                     <h2 class="text-controles">Adicione os seus ganhos aqui!</h2>
